--- a/index.html
+++ b/index.html
@@ -753,11 +753,22 @@
                 </ul>
             </div>
             <div class="col-md-8">
-                <h3 id="library">VCU Library</h3>
+                <h3 id="library">VCU Libraries</h3>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#library" aria-label="mail this">email a link to this section</a></div> -->
                 <ul>
-                    <li><a href="https://www.library.vcu.edu/covid19/" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://www.library.vcu.edu/covid19/&amp;source=gmail&amp;ust=1584489002675000&amp;usg=AFQjCNF1l_3HzB_INcws7iykp-FWGrDppQ">VCU Libraries Operations for COVID-19</a>. This page provides a high-level overview of all library operations related to the university's COVID-19 response, linking out to other content as necessary.</li>
-                    <li><a href="https://guides.library.vcu.edu/continuity/" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://guides.library.vcu.edu/continuity/&amp;source=gmail&amp;ust=1584489002675000&amp;usg=AFQjCNHOW0SN-4KJaAqEk2S-GnRVRUh1tw">VCU Libraries Instruction and Research Support: COVID-19</a>. This is a more detailed guide on services that will be useful for both faculty and students, but leans a little more towards faculty with a strong focus on how we can integrate into and support online/distance coursework from a collections and instructional perspective.</li>
+                    <li><a href="https://www.library.vcu.edu/covid19/" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://www.library.vcu.edu/covid19/">VCU Libraries Operations for COVID-19</a>. This page provides a high-level overview of all library operations related to the university's COVID-19 response, linking out to other content as necessary.</li>
+                    <li>
+                    <p><a href="https://apps.library.vcu.edu/forms/instruction" target="_blank" rel="noopener" >Request Library Instruction</a>: If your class requires library instruction, librarians at Cabell and Tompkins-McCaw Libraries can meet your needs in a variety of ways.  As a result of the pandemic, library instruction will be offered remotely unless there is a compelling reason for in-person delivery. Librarians are able to deliver instruction in a variety of synchronous or asynchronous formats.</p>
+                    </li>
+                     <li>
+                    <p><a href="https://www.library.vcu.edu/research-teaching/ask-us/" target="_blank" rel="noopener">Online and in-person help</a>: VCU Libraries is here to support you and your students’ research needs and answer questions about our services, spaces or collections.</p>
+                    </li>
+                     <li>
+                    <p><a href="https://www.library.vcu.edu/covid19/#online" target="_blank" rel="noopener"> Access to libraries resources</a>: While the libraries are open, they continue to support access to many resources online or through pickup and delivery services to accommodate remote and off-campus access.</p>
+                    </li>
+                    <li>
+                    <p><a href="https://guides.library.vcu.edu/acc" target="_blank" rel="noopener">Open and affordable course content</a>: VCU Libraries Open and Affordable Course Content Initiative supports instructors as they work to transition their courses to zero textbook cost courses, using either library content or <a href="https://guides.library.vcu.edu/oer" target="_blank" rel="noopener">open educational resources</a>, much of which is online and appropriate for remote instruction.</p>
+                    </li>
                 </ul>
             </div>
             <div class="col-md-8">
